--- a/styles/style.css
+++ b/styles/style.css
@@ -17,8 +17,8 @@ body {
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
     --gutter: 30px;
     --footer-height: 25px;
-    
-    font-family: 'Titillium Web', sans-serif;
+    background-color: rgb(223, 247, 239);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: var(--color2);
 }
 button {
@@ -26,6 +26,7 @@ button {
 }
 img {
     width: 700px;
+    margin: 20px;
 }
 main {
     display: flex;
@@ -36,7 +37,6 @@ main {
 }
 
 section {
-    background-color: var(--color5);
     width: 1000px;
     max-width: 80%;
     display: flex;
@@ -51,68 +51,29 @@ section {
 }
 
 header {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr .3fr;
     justify-content: flex-end;
-    background-color: var(--color3);
     height: var(--header-height);
     box-shadow: var(--shadow);
 }
 
+#title {
+    font-size: 50px;
+}
 footer {
+    margin: 50px;
     display: flex;
-    justify-content: flex-end;
-    background-color: var(--color3);
-    box-shadow: var(--shadow);
-}
-
-
-h2 {
-    font-size: 1.8rem;
-    font-weight: bold;
-}
-
-.gutter-right {
-    margin-right: 20px;
-}
-
-.main-logo {
-    animation: pulse 5s infinite ease-in-out;
 }
 
 header img {
     height: var(--header-height);
 }
 
-p {
-    margin: var(--gutter);
+ul {
+    display: grid;
+    justify-content: left;
+    align-items: left
+    ;
+    padding: 20px;
 }
-  
-footer {
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    height: var(--footer-height);
-    display: flex;
-    justify-content: flex-end;
-    background-color: var(--color3);
-    box-shadow: var(--shadow);
-}
-  
-  @keyframes pulse {
-    20% {
-      transform: rotate3d(-10, -10, -10, 50deg) scale(1.2);
-    }
-
-    40% {
-        transform: rotate3d(10, 10, -10, 50deg) scale(1);
-    }
-
-    60% {
-        transform: rotate3d(-10, 10, 10, 50deg) scale(1.2);
-      }
-
-    80% {
-        transform: rotate3d(10, 10, 10, 50deg) scale(1);
-    }
-
-  }
